# disce

./: .gitignore  .prettierignore  .prettierrc  README.md  conftest.py  package-lock.json  package.json  pyproject.toml
.github/: renovate-admin.json  renovate.json
.github/workflows/: ci.yml  ci_cd.yml  renovate.yml
scripts/: export_marugoto.py  install_deps.py  install_firefox.py  sync_pyscript.py
src/: index.html
src/css/: style.css
src/python/: pyscript.toml
src/python/disce/: __init__.py  __main__.py  data.py  diffs.py  furigana.py  main.py  pyscript.py  ruby.py  storage.py  test1.py  test2.py  tools.py  tts.py
src/python/disce/models/: __init__.py  base.py  cards.py  configs.py  deck_data.py  deck_metadata.py  exports.py
src/python/disce/screens/: __init__.py  base.py  decks.py  edit_deck.py  edit_decks.py  load.py  main.py  study.py  tools.py
src/python/disce/storage/: __init__.py  base.py  local.py
src/python/pyodide/: __init__.pyi
src/python/pyodide/ffi/: __init__.pyi  wrappers.pyi
src/python/pyscript/: __init__.pyi
src/python/pyscript/ffi/: __init__.pyi
tests/disce_tests/: browser.py  conftest.py  test_data.py  test_diffs.py  test_main.py  test_tools.py
tests/disce_tests/injected/: __init__.py  __main__.py  conftest.py  main.py  test_pyscript.py  test_tts.py  tools.py
tests/disce_tests/injected/screens/: __init__.py  conftest.py  test_base.py  test_decks.py  test_edit_deck.py  test_load.py  test_study.py  test_tools.py  tools.py
tests/disce_tests/injected/storage/: base.py  test_local.py
tests/disce_tests/selenium/: browsers.py  conftest.py  outputs.py  server.py  servers.py  test_injected.py  web_drivers.py
tests/disce_tests/selenium/e2e/: test_dummy.py
tests/disce_tests/storage/: dict.py  test_base.py  test_local.py
tests/disce_tests/unit/: test_data.py  test_diffs.py  test_furigana.py  test_main.py  test_ruby.py  test_tools.py
tests/disce_tests/unit/models/: test_base.py  test_cards.py  test_configs.py  test_deck_data.py  test_deck_metadata.py  test_exports.py
tests/disce_tests/unit/storage/: dict.py  test_base.py
