# Copyright (C) 2025 Julian Valentin
#
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.

[project]
name = "disce"
version = "1.0.0"
description = "Learn flashcards by heart, in the browser, without server state."
readme = "README.md"
requires-python = "~=3.13.0"
dependencies = [
    "pydantic>=2.12.3",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "packaging>=25.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.12.11",
    "selenium>=4.35.0",
    "tomlkit>=0.13.3",
]

[tool.coverage.report]
fail_under = 100
omit = [
    "src/python/disce/screens/*",
    "src/python/disce/storage/local.py",
]
show_missing = true

[tool.coverage.run]
source = ["src/python"]

[tool.mypy]
mypy_path = "src/python"
files = [
    "scripts",
    "src",
    "tests",
]
strict = true

[tool.pytest.ini_options]
addopts = "--ignore=tests/disce_tests/injected --cov --verbose --verbose"
filterwarnings = ["error"]
log_format = "%(name)s:%(levelname)s - %(message)s"
log_level = "INFO"
pythonpath = ["src/python"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = [
    "COM812",
    "D203",
    "D213",
    "S310",
    "S311",
    "S603",
    "S607",
]
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "ARG001",
    "D",
    "PLR2004",
    "S101",
]

[tool.uv.build-backend]
module-root = "src/python"
